Fixes some layout issues

--- a/django/media/css/style.css
+++ b/django/media/css/style.css
@@ -42,7 +42,6 @@ p {
 }
 
 .gallery__window {
-	margin-top: -2em;
 	z-index: 1;
     display: flex;
     flex-direction: column;
@@ -146,7 +145,7 @@ p {
 	padding: 0;
 	background-color: rgba(0, 0, 0, .5);
     margin-bottom: -2em;
-    height: 100%;
+    height: auto;
 }
 
 .gallery__video {
